# forge

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  build-docker.sh  dcos  docker-compose.yml  docker-entrypoint.sh  forge-cli.py  forge-tui.py  pyproject.toml  reset_alembic.py  run.py  run_unit_tests.sh  setup.bat  setup.sh
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: docker-build.yml  tests.yml
alembic/: env.py
alembic/versions/: 08cc005a4bc8_create_forge_api_key_provider_scope_.py  0ce4eeae965f_drop_usage_stats_table.py  1876c1c4bc96_add_price_table.py  39bcedfae4fe_add_model_default_pricing.py  40e4b59f754d_add_stripe_payment_table.py  4a685a55c5cd_create_usage_tracker_table.py  4a82fb8af123_create_forge_api_keys_table.py  683fc811a969_add_billable_column_to_usage_tracker.py  6a92c2663fa5_base.py  831fc2cf16ee_enable_soft_deletion_for_provider_keys_.py  9daf34d338f7_update_model_mapping_type_for_.py  a58395ea1b22_add_balance_system.py  b206e9a941e3_add_cost_tracking_to_usage_tracker_table.py  b38aad374524_create_api_request_log_table.py  b5d4363a9f62_add_clerk_user_id_to_users.py  c50fd7be794c_add_endpoint_column_to_usage_stats.py  c9f3e548adef_add_lambda_model_pricing.py  ca1ac51334ec_create_usage_stats_table.py  create_wallets_table.py  f45e46b231f3_add_admin_users.py  f5522808aba9_.py  initial_migration.py
app/: __init__.py  main.py
app/api/: dependencies.py
app/core/: async_cache.py  cache.py  database.py  logger.py  redis_cache.py  security.py
app/exceptions/: exceptions.py
app/models/: admin_users.py  api_request_log.py  base.py  forge_api_key.py  pricing.py  provider_key.py  stripe.py  usage_tracker.py  user.py  wallet.py
app/services/: pricing_service.py  provider_service.py  usage_stats_service.py  wallet_service.py
app/utils/: anthropic_converter.py  anthropic_streaming.py  model_name_matcher.py  serialization.py  translator.py
cli_tools/: config.ini  forge-cli.py  styles.tcss
docs/: DATABASE_CONNECTION_TROUBLESHOOTING.md  DISTRIBUTED_CACHE_MIGRATION.md  PERFORMANCE_OPTIMIZATIONS.md  claude_code_support.md  code-style.md  deployment-guide.md  installation.md  user_guide.md
examples/: claude_code_example.py
k8s/: deployment.yaml  service.yaml
tests/: README.md  __init__.py  frontend_simulation.py  integration_test.py  run_tests.py  test_basic.py  test_token_counting_stream.py
tests/cache/: __init__.py  test_async_cache.py  test_sync_cache.py
tests/mock_testing/: README.md  __init__.py  add_mock_provider.py  mock_openai.py  run_mock_tests.py  setup_test_user.py  test_mock_client.py  test_mock_provider.py
tests/performance/: README.md  __init__.py  analyze_results.py  conftest.py  locustfile.py  test_latency.py  test_providers.py  test_throughput.py
(+80 files in other folders)
